<?xml version="1.0"?>
<package format="2">
  <name>uvone_description</name>
  <version>0.1.0</version>
  <description>
    The uvone_robot_bringup package.
  </description>
  <maintainer email="theverbat@gmail.com">Rafael Martin</maintainer>
  <license>BSD</license>
  <author email="theverbat@gmail.com">Rafael Martin</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>kobuki_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export/>
</package>
