<?xml version="1.0"?>
<package format="2">
  <name>uvone_msgs</name>
  <version>0.1.0</version>
  <description>
    The uvone_msgs package.
  </description>
  <maintainer email="theverbat@gmail.com">Rafael Martin</maintainer>
  <license>BSD</license>
  <author email="theverbat@gmail.com">Rafael Martin</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export/>
</package>
