<?xml version="1.0"?>
<package format="2">
  <name>uvone_navigation</name>
  <version>0.1.0</version>
  <description>
    The uvone_navigation package.
  </description>
  <maintainer email="theverbat@gmail.com">Rafael Martin</maintainer>
  <license>BSD</license>
  <author email="theverbat@gmail.com">Rafael Martin</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>uvone_msgs</build_depend>
  <build_depend>sensor_door_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <build_export_depend>tf2_geometry_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>uvone_msgs</exec_depend>
  <exec_depend>sensor_door_msgs</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

  <build_depend>roslib</build_depend>

  <export/>
</package>
