<?xml version="1.0"?>
<package format="2">
  <name>uvone_teleop</name>
  <version>0.1.0</version>
  <description>
    The uvone_robot_teleop package.
  </description>
  <maintainer email="theverbat@gmail.com">Rafael Martin</maintainer>
  <license>BSD</license>
  <author email="theverbat@gmail.com">Rafael Martin</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>ds4_driver</build_depend>
  <build_depend>uvone_msgs</build_depend>
  <build_depend>sensor_door_msgs</build_depend>

  <export/>
</package>
